--- a/src/index.css
+++ b/src/index.css
@@ -62,5 +62,10 @@ body {
 }
 
 .opt {
-  background: #f79505;
+  background: #22C8DD;
+}
+
+.opt:focus {
+  background: #DD3722;
+  border: 2px solid #242424;
 }
